--- a/billion.html
+++ b/billion.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Countdown to Armageddon</title>
+        <title>For a Few Billion</title>
         <script type="text/javascript">
             var days = 30;
             var money = .01;
